--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -46,6 +46,9 @@ nav .menu a{
 header{
     background-color: #FFF8F3;
     padding-top: 50px;
+    background: url("../images/developer.png") , url("../images/header_bg.png") ,#FFF8F3;
+    background-position: top left , bottom right;
+    background-repeat: no-repeat;
 }
 
 nav{
@@ -55,5 +58,44 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+}
+
+#banner{
+    /* border: 2px solid red; */
+    margin: 12px 38px 0px 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.banner-content{
+    max-width: 585px;
+}
+
+.banner-content h2{
+    color: #474747;
+    font-size: 45px;
+    font-weight: 400;
+    margin-bottom: 5px;
+}
+
+.banner-content h1{
+    color: #181818;
+    font-size: 54px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.banner-content p{
+    color: #757575;
+    font-size: 18px;
+    line-height: 30px;
+    margin-bottom: 30px;
+}
+
+.banner-image{
+    max-width: 585px;
+    vertical-align: middle;
 
 }
