--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -187,3 +187,111 @@ nav{
     line-height: 28px;
 
 }
+
+#resume{
+    padding-top: 130px;
+}
+
+#resume .resume-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 113px auto 0;
+    display: flex;
+    gap: 24px;
+}
+
+.resume-container .section-title{
+    color: #474747;
+    font-size: 30px;
+    margin-bottom: 30px;
+
+} 
+
+.resume-card{
+    max-width: 511px;
+    margin-right: 47px;
+}
+
+.resume-card .card-title{
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #474747;
+}
+
+.resume-card .card-info{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    color: #757575;
+}
+
+.resume-card .card-text{
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
+}
+
+.resume-container hr{
+    margin: 30px 0;
+}
+
+.text-center{
+    text-align: center;
+}
+
+footer{
+    margin-top: 130px;
+    background-color: #FFF8F3;
+    padding: 130px 0;
+}
+
+.footer-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    /* justify-content: space-around; */
+    gap: 116px;
+}
+
+.footer-container .social{
+    max-width: 562px;
+}
+
+.footer-container h2{
+    font-size: 35px;
+    color: #181818;
+    margin-bottom: 20px;
+}
+
+.footer-container .social p{
+    font-size: 16px;
+    color: #474747;
+    line-height: 28px;
+    margin-bottom: 30px;
+}
+
+.footer-container .social .icons a{
+    margin-right: 24px;
+}
+
+.form input[type="text"],[type="email"]{
+    width: 461px;
+    height: 64px;
+    margin-bottom: 24px;
+    border-radius: 5px;
+    border: none;
+    padding: 18px 31px;
+    color: #757575;
+}
+
+.form textarea{
+    width: 461px;
+    height: 180px;
+    border: none;
+    border-radius: 5px;
+    padding: 18px 31px;
+    color: #757575;
+    margin-bottom: 24px;
+}
