--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -295,3 +295,81 @@ footer{
     color: #757575;
     margin-bottom: 24px;
 }
+
+.hide{
+    display: none !important;
+}
+
+@media screen and (max-width:576px) {
+    
+     #skills{
+            padding-top: 60px;
+    }
+
+    #skills .skill-container {
+    width: 95%;
+    }
+
+    #skills .skill-container .skill-box {
+    flex-direction: column;
+    gap: 24px;
+}
+
+.skill-box .skill-card {
+    padding: 30px;
+    max-width: 100%;
+    box-shadow: 0 6px 50px #0000003c;
+}
+
+    
+
+    #about {
+    padding-top: 60px;
+}
+
+#about .about-container {
+    width: 100%;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 20px;
+}
+
+#about .about-container .about-info {
+    flex-direction: column;
+    gap: 20px;
+}
+
+#resume {
+    padding-top: 60px;
+}
+
+.section-heading {
+    max-width: 100%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#resume .resume-container {
+    width: 95%;
+   flex-direction: column;
+}
+
+.footer-container {
+    width: 95%;
+    flex-direction: column;
+}
+
+nav {
+    width: 95%;
+    max-width: 1600px;
+    margin: 0px auto;
+   flex-direction: column;
+}
+
+#banner {
+    /* border: 2px solid red; */
+    margin:20px;
+    flex-direction: column;
+   
+}
+}
